<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black_light"
    android:orientation="vertical"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingStart="@dimen/_10sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_date_inv_data"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/txt_date_static"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/txt_date_static"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingEnd="@dimen/_20sdp"
                    android:text="التاريخ :" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_customerName_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_20ssp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinner_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                app:hintText="@string/spinner" />

            <TextView
                android:id="@+id/txt_unit_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/unit"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/et_quantum_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/quantum"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/et_price_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10ssp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/txt_total_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/total"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/et_details_inv_data"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/details"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnShowInvoices"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/btn_invoice_click"
                    android:textSize="@dimen/_10ssp" />

                <Button
                    android:id="@+id/btn_submit_sales_inv_data"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/btn_invoice_data"
                    android:textSize="@dimen/_10ssp" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>