<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_invoice_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/product_cached"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/txt_product_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/txt_invoice_static"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_unit_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/unit_cached"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/txt_unit_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toStartOf="@+id/txt_unit_static"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:id="@+id/txt_quantum_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/quantum_cached"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/et_quantum_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/txt_quantum_static"

            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_price_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/price_cached"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/txt_price_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toStartOf="@+id/txt_price_static"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:id="@+id/txt_total_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/total_product_cached"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/txt_total_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toStartOf="@+id/txt_total_static"
            android:textSize="@dimen/_16ssp" />

    </RelativeLayout>


</LinearLayout>