<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black_light"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txt_choose_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/choose_way"
        android:textSize="@dimen/_15ssp" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/white"
        app:hintText="اختار العميل ..." />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <Button
            android:id="@+id/btn_pay_cash"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_1sdp"
            android:gravity="center"
            android:text="@string/cash_payment"
            android:textSize="@dimen/_20ssp" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/cash_payment1"
            android:textSize="@dimen/_20ssp" />

    </LinearLayout>

</LinearLayout>