<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black_light"
    android:orientation="vertical"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingStart="@dimen/_10sdp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_date_static"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center"
                android:paddingEnd="@dimen/_20sdp"
                android:text="التاريخ :" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_toStartOf="@+id/txt_date_static"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingEnd="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/icon_badge"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    app:srcCompat="@mipmap/add_card" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="0"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

            </FrameLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/txt_customerName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/white"
            android:gravity="start"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_20ssp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            app:hintText="@string/spinner" />

        <TextView
            android:id="@+id/txt_unit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/unit"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/et_quantum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/quantum"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/_12sdp"
            android:text="@string/total"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/et_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/details"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btn_submit_sales"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/order"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</ScrollView>


</LinearLayout>