<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black_light"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_date_static"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingEnd="@dimen/_20sdp"
            android:text="التاريخ :" />

        <TextView
            android:id="@+id/txt_date_cash"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_toStartOf="@+id/txt_date_static"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txt_customerName_cash"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@color/white"
        android:gravity="start"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_20ssp" />

    <EditText
        android:id="@+id/et_payment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@color/white"
        android:hint="@string/payment_cash"
        android:inputType="numberDecimal"
        android:padding="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnshowallinvoices"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/btn_show"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btn_cash_payment"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/btn_cash"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>

</LinearLayout>